forge/tests/errors/did_you_mean.fg
// Error test: misspelled variable should suggest correction
fn main() {
  let count = 42
  println(string(cont))
}
